Refactored test cases and patched bug with adding or removing elements from the beginning of list using the index